<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello, Ken!</string>
    <string name="app_name">Yamba</string>
    <string name="activity_main_title">Status Update</string>
    <string name="button_update_text">Update Status</string>
    <string name="edit_msg_hint">Please enter a status update of 140 characters or less</string>
    <string name="post_status_success">Posted message successfully</string>
    <string name="post_status_fail">Failed to post message</string>
    <string name="pref_user_key">PREF_USER</string>
    <string name="pref_user_title">User Name</string>
    <string name="pref_password_key">PREF_PASSWORD</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_site_url_key">PREF_SITE_URL</string>
    <string name="pref_site_url_title">Site URL</string>
    <string name="pref_site_url_summary">The URL to access your microblogging site</string>
    <string name="menu_preference_title">Settings</string>
    <string name="menu_preference_title_cond">Settings</string>
    <string name="menu_refresh_title">Refresh</string>
    <string name="menu_refresh_title_cond">Refresh</string>
    <string name="menu_timeline_title">Show Home Timeline</string>
    <string name="menu_timeline_title_cond">Timeline</string>
    <string name="menu_compose_title">New Status</string>
    <string name="menu_compose_title_cond">New Status</string>
    <string name="perm_new_status_label">Receive new Yamba status notification</string>
    <string name="perm_new_status_description">Receive notifications that Yamba has downloaded new timeline information</string>
    <string name="notify_new_status_ticker">New Yamba message</string>
    <string name="notify_new_status_content_text">You have unread messages in Yamba</string>

</resources>